汉化 部分服务器消息文件和帮助文档

--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -81,7 +81,7 @@ http://rathena.org/board/index.php?showtopic=58877
 
 groups: (
 {
-	id: 0 /* group 0 is the default group for every new account */
+	id: 0 /* 0 = 每个新账户的初始等级，代表普通玩家组 */
 	name: "Player"
 	level: 0
 	inherit: ( /*empty list*/ )
@@ -90,8 +90,7 @@ groups: (
 		resurrect: true
 	}
 	permissions: {
-		/* without this basic permissions regular players could not 
-		trade or party */
+		/* 没有这个权限，玩家就不能交易或组队*/
 		can_trade: true
 		can_party: true
 		attendance: true
@@ -100,37 +99,37 @@ groups: (
 {
 	id: 1
 	name: "Super Player"
-	inherit: ( "Player" ) /* can do everything Players can and more */
+	inherit: ( "Player" ) /* 包含Player的权限 */
 	level: 0
 	commands: {
-		/* informational commands */
-		commands: true
-		charcommands: true
-		help: true
-		rates: true
-		uptime: true
-		showdelay: true
-		exp: true
-		mobinfo: true
-		iteminfo: true
-		whodrops: true
-		time: true
-		jailtime: true
-		hominfo: true
-		homstats: true
-		showexp: true
-		showzeny: true
-		whereis: true
-		/* feature commands */
-		refresh: true
-		noask: true
-		noks: true
-		autoloot: true
-		alootid: true
-		autoloottype: true
-		autotrade: true
-		request: true
-		go: true
+		/* 可用命令 */
+		commands: true				//显示所有可用命令
+		charcommands: true			//显示可用的角色相关命令
+		help: true					//显示命令相关帮助
+		rates: true					//显示服务器经验值设置
+		uptime: true				//显示服务器启动时间
+		showdelay: true				//显示 "技能使用延迟"的提示
+		exp: true					//显示当前等级和经验值
+		mobinfo: true				//显示魔物信息
+		iteminfo: true				//显示道具信息
+		whodrops: true				//显示掉落信息
+		time: true					//显示服务器时间
+		jailtime: true				//显示剩余监禁时间
+		hominfo: true				//显示人工生命体信息
+		homstats: true				//显示人工生命体属性
+		showexp: true				//显示 获得的经验值
+		showzeny: true				//显示 获得的Zeny
+		whereis: true				//显示魔物位置
+		/* feature commands */		
+		refresh: true				
+		noask: true					//自动拒绝邀请
+		noks: true					
+		autoloot: true				//自动拾取物品
+		alootid: true				//自动拾取指定物品
+		autoloottype: true			//自动拾取指定类型物品
+		autotrade: true				//离线挂店
+		request: true				//发消息给在线GM
+		go: true					//传送到主要城市
 		breakguild: true
 		channel: true
 		/* langtype: true */
@@ -145,18 +144,18 @@ groups: (
 	inherit: ( "Super Player" )
 	level: 1
 	commands: {
-		version: true
-		where: true
-		jumpto: true
-		who: true
-		who2: true
-		who3: true
-		whomap: true
-		whomap2: true
-		whomap3: true
-		users: true
-		broadcast: true
-		localbroadcast: true
+		version: true				//显示服务器SVN版本号
+		where: true					//显示角色的位置
+		jumpto: true				//瞬移到指定角色身边
+		who: true					//显示在线玩家
+		who2: true					//显示在线玩家职业
+		who3: true					//显示在线玩家队伍和工会
+		whomap: true				//显示当前地图在线玩家
+		whomap2: true				//显示当前地图在线玩家职业
+		whomap3: true				//显示当前地图在线玩家队伍和工会
+		users: true					//显示玩家的分布地图
+		broadcast: true				//广播
+		localbroadcast: true		//在当前地图广播
 	}
 	log_commands: true
 	permissions: {
@@ -170,13 +169,13 @@ groups: (
 	inherit: ( "Support" )
 	level: 1
 	commands: {
-		tonpc: true
-		hidenpc: true
-		shownpc: true
-		loadnpc: true
-		unloadnpc: true
-		npcmove: true
-		addwarp: true
+		tonpc: true					//传送至NPC
+		hidenpc: true				//隐藏NPC
+		shownpc: true				//显示NPC
+		loadnpc: true				//加载NPC
+		unloadnpc: true				//卸载NPC
+		npcmove: true				//移动NPC
+		addwarp: true				//添加临时传送点
 	}
 	log_commands: true
 	permissions: {
@@ -189,31 +188,31 @@ groups: (
 	inherit: ( "Support" )
 	level: 1
 	commands: {
-		monster: true
-		monstersmall: true
-		monsterbig: true
-		killmonster2: true
-		cleanarea: true
+		monster: true				//召唤魔物
+		monstersmall: true			//召唤魔物(缩小版)
+		monsterbig: true			//召唤魔物(放大版)
+		killmonster2: true			//杀死当前地图魔物(不会掉落物品)
+		cleanarea: true				
 		cleanmap: true
-		item: [true, true]
-		zeny: [true, true]
-		disguise: [true, true]
-		undisguise: [true, true]
-		size: [true, true]
-		raise: true
-		raisemap: true
-		day: true
-		night: true
-		skillon: true
-		skilloff: true
-		pvpon: true
-		pvpoff: true
-		gvgon: true
-		gvgoff: true
-		allowks: true
-		me: true
-		marry: true
-		divorce: true
+		item: [true, true]			//创造物品
+		zeny: [true, true]			//修改Zeny
+		disguise: [true, true]		//变换玩家为魔物外观
+		undisguise: [true, true]	//恢复玩家外观
+		size: [true, true]			//改变玩家大小
+		raise: true					//复活服务器全部玩家
+		raisemap: true				//复活当前地图全部玩家
+		day: true					//改为白天
+		night: true					//改为黑夜
+		skillon: true				//允许当前地图使用技能
+		skilloff: true				//禁止当前地图使用技能
+		pvpon: true					//当前地图开启PVP
+		pvpoff: true				//当前地图关闭PVP
+		gvgon: true					//当前地图开启工会战
+		gvgoff: true				//当前地图关闭工会战
+		allowks: true				//当前地图开启抢怪保护
+		me: true					//显示消息
+		marry: true					//结婚
+		divorce: true				//离婚
 		refreshall: true
 	}
 	log_commands: true
@@ -225,7 +224,7 @@ groups: (
 {
 	id: 5
 	name: "VIP"
-	inherit: ( "Player" ) /* can do everything Players can */
+	inherit: ( "Player" ) /* 包含Player的权限 */
 	level: 0
 	commands: {
 		rates: true
@@ -241,25 +240,25 @@ groups: (
 	inherit: ( "Support" )
 	level: 2
 	commands: {
-		hide: true
-		follow: true
-		kick: true
-		disguise: true
-		fakename: true
-		option: true
-		speed: true
-		warp: true
-		kill: true
-		recall: true
-		ban: true
-		block: true
-		jail: true
-		jailfor: true
-		mute: true
-		storagelist: true
-		cartlist: true
-		itemlist: true
-		stats: true
+		hide: true					//隐身
+		follow: true				//跟随指定玩家
+		kick: true					//强制指定玩家下线
+		disguise: true				//改变玩家为魔物外观
+		fakename: true				//暂时改变角色名称
+		option: true				
+		speed: true					//改变移动速度
+		warp: true					//传送到指定地图
+		kill: true					//杀死指定玩家
+		recall: true				//召唤指定玩家到身边
+		ban: true					//冻结指定玩家一段时间
+		block: true					//冻结指定玩家
+		jail: true					//将玩家送入监狱
+		jailfor: true				//将玩家监禁一段时间
+		mute: true					//将玩家禁言
+		storagelist: true			//显示玩家仓库物品
+		cartlist: true				//显示玩家手推车物品
+		itemlist: true				//显示玩家背包物品
+		stats: true					//显示玩家属性
 	}
 	log_commands: true
 	permissions: {
