--- a/conf/msg_conf/char_msg_chs.conf
+++ b/conf/msg_conf/char_msg_chs.conf
@@ -11,6 +11,172 @@
 // 因为熊猫模拟器碰到 UTF8-BOM 编码时, 会在文件读取时进行转码,
 // 而转换的目标编码与运行服务端的操作系统语言有关系
 //--------------------------------------------------------------
+0: 初心者
+1: 剑士
+2: 魔法师
+3: 弓箭手
+4: 服事
+5: 商人
+6: 盗贼
+7: 骑士
+8: 牧师
+9: 巫师
+10: 铁匠
+11: 猎人
+12: 刺客
+13: 十字军
+14: 武僧
+15: 贤者
+16: 流氓
+17: 炼金术师
+18: 诗人
+19: 舞娘
+20: 结婚礼服
+21: 超级初心者
+22: 枪手
+23: 忍者
+24: 圣诞节服装
+25: 进阶初心者
+26: 进阶剑士
+27: 进阶魔法师
+28: 进阶弓箭手
+29: 进阶服事
+30: 进阶商人
+31: 进阶盗贼
+32: 骑士领主
+33: 神官
+34: 超魔导师
+35: 神工匠
+//35: Mastersmith //IRO name
+36: 神射手
+37: 十字刺客
+38: 圣殿十字军
+39: 武术宗师
+40: 智者
+//40: Scholar //IRO name
+41: 神行太保
+42: 创造者
+//42: Biochemist //IRO Name
+43: 搞笑艺人
+//43: Minstrel //IRO Name
+44: 冷艳舞姬
+45: 初心者宝宝
+46: 剑士宝宝
+47: 魔法师宝宝
+48: 弓箭手宝宝
+49: 服事宝宝
+50: 商人宝宝
+51: 盗贼宝宝
+52: 骑士宝宝
+53: 牧师宝宝
+54: 巫师宝宝
+55: 铁匠宝宝
+56: 猎人宝宝
+57: 刺客宝宝
+58: 十字军宝宝
+59: 武僧宝宝
+60: 贤者宝宝
+61: 流氓宝宝
+62: 炼金术师宝宝
+63: 诗人宝宝
+64: 舞娘宝宝
+65: 超级初心者宝宝
+66: 跆拳少年
+67: 拳圣
+68: 灵媒
+//69 free
+//70 free
+71: 夏日服装
+72: Gangsi
+73: 死亡骑士
+74: 黑暗收集者
+75: 卢恩骑士
+76: 大法师
+77: 游侠
+78: 大主教
+79: 机匠
+80: 十字斩首者
+81: 皇家卫士
+82: 元素使
+83: 宫廷乐师
+//83: Maestro //IRO Name
+84: 浪姬舞者
+85: 修罗
+86: 基因学者
+//86: Geneticist //IRO Name
+87: 魅影追踪者
+88: 卢恩骑士宝宝
+89: 大法师宝宝
+90: 游侠宝宝
+91: 大主教宝宝
+92: 机匠宝宝
+93: 十字斩首者宝宝
+94: 皇家卫士宝宝
+95: 元素使宝宝
+96: 宫廷乐师宝宝
+97: 浪姬舞者宝宝
+98: 修罗宝宝
+99: 基因学者宝宝
+100: 魅影追踪者宝宝
+101: 进阶超级初心者
+102: 进阶超级初心者宝宝
+103: 影狼
+104: 胧
+105: 韩服
+106: 反叛者
+107: 啤酒节
+108: 召唤师
+109: 宝宝召唤师
+110: 宝宝忍者
+111: 宝宝影狼
+112: 宝宝胧
+113: 宝宝跆拳道
+114: 宝宝明星斗士
+115: 宝宝悟灵士
+116: 宝宝枪手
+117: 宝宝反叛者
+118: 贤者
+119: 灵魂收割者
+120: 宝宝星星皇帝
+121: 宝宝灵魂收割者
+
+199: 未知职业
+
+//拍卖
+200: 拍卖经理
+201: 拍卖
+202: 谢谢，您赢得了拍卖！
+203: 请为您的拍卖付款
+204: No buyers have been found for your auction.
+205: 拍卖取消。
+206: 拍卖关闭。
+207: 拍卖获胜者
+208: 有人出了更高的价格
+209: 您出了更高高的价格
+210: 您赢得了拍卖。
+211: 请为您的拍卖付款
+
+// @accountinfo
+212: No matches were found for your criteria, '%s'
+213: An error occured, bother your admin about it.
+214: Your query returned the following %d results, please be more specific...
+215: [AID: %d] %s | %s | 等级: %d/%d | %s
+216: 没有找到ID为 '%d' 的账号.
+217: -- 账号 %d --
+218: 用户: %s | GM等级: %d | State: %d
+//219: FREE
+//220: FREE
+221: 账号 邮箱: %s | 生日: %s
+222: 最后登录 IP: %s (%s)
+223: This user has logged in %d times, the last time was at %s
+224: -- 角色详情 --
+225: [Slot/CID: %d/%d] %s | %s | 等级: %d/%d | %s
+226: 此账号内没有角色
+
+// 成就
+227: GM
+228: 成就奖励邮件
+229: [%s] 成就奖励
 
 // =============================================================
 // 熊猫模拟器拓展的消息 - 开始
