--- a/conf/msg_conf/login_msg_chs.conf
+++ b/conf/msg_conf/login_msg_chs.conf
@@ -11,3 +11,26 @@
 // 因为熊猫模拟器碰到 UTF8-BOM 编码时, 会在文件读取时进行转码,
 // 而转换的目标编码与运行服务端的操作系统语言有关系
 //--------------------------------------------------------------
+0: 账户未注册.
+1: 密码不正确.
+2: 账户已过期.
+3: 服务器拒绝连接.
+4: 账户被GM冻结.
+5: 客户端版本低.
+6: 被禁止登陆.
+7: 服务器繁忙.
+8: Account limit from company
+9: 账户被DBA冻结
+10: 邮箱未认证
+11: 账户被GM冻结
+12: Working in DB
+13: Self Lock
+14: Not Permitted Group
+15: Not Permitted Group
+16: Account gone.
+17: 保留登录信息.
+18: Hacking investigation.
+19: Bug investigation.
+20: Deleting char.
+21: Deleting spouse char.
+22: 未知错误.
