整理最近一次合并 rAthena 官方代码后的脚本和数据文件

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -424,7 +424,7 @@ Body:
   Translation: ""
 - Original: "Bonus Script saved for CID=%d. Total: %d.\n"
   Translation: ""
-- Original: "Book name for item ID %hu is not known.\n"
+- Original: "Book name for item ID %u is not known.\n"
   Translation: ""
 - Original: "Broken pipe found... closing socket\n"
   Translation: ""
@@ -936,17 +936,17 @@ Body:
   Translation: ""
 - Original: "Item name for item ID %hu (head top) is not known.\n"
   Translation: ""
-- Original: "Item name for item ID %hu (pet equip) is not known.\n"
+- Original: "Item name for item ID %u (pet equip) is not known.\n"
   Translation: ""
-- Original: "Item name for item ID %hu (shield) is not known.\n"
+- Original: "Item name for item ID %u (shield) is not known.\n"
   Translation: ""
-- Original: "Item name for item ID %hu (weapon) is not known.\n"
-  Translation: ""
-- Original: "Item name for item id %hu is not known (equipment).\n"
+- Original: "Item name for item ID %u (weapon) is not known.\n"
   Translation: ""
 - Original: "Item name for item id %hu is not known (itemcost).\n"
   Translation: ""
-- Original: "Item name for item id %hu is not known.\n"
+- Original: "Item name for item id %u is not known (equipment).\n"
+  Translation: ""
+- Original: "Item name for item id %u is not known.\n"
   Translation: ""
 - Original: "LAN Support configuration file is not found: %s\n"
   Translation: ""
@@ -2300,8 +2300,6 @@ Body:
   Translation: ""
 - Original: "buildin_npcskilleffect: Invalid skill defined (%s)!\n"
   Translation: ""
-- Original: "buildin_npcskilleffect: Invalid skill level %d, capping to %d.\n"
-  Translation: ""
 - Original: "buildin_open_roulette: Roulette system is disabled.\n"
   Translation: ""
 - Original: "buildin_open_roulette: This command requires PACKETVER 2014-10-22 or newer.\n"
@@ -2495,8 +2493,6 @@ Body:
 - Original: "buildin_showvend: The 'message' param must be a string.\n"
   Translation: ""
 - Original: "buildin_skilleffect: Invalid skill defined (%s)!\n"
-  Translation: ""
-- Original: "buildin_skilleffect: Invalid skill level %d, capping to %d.\n"
   Translation: ""
 - Original: "buildin_sleep2: negative or zero amount('%d') of milli seconds is not supported\n"
   Translation: ""
@@ -3178,7 +3174,7 @@ Body:
   Translation: ""
 - Original: "itemdb_read_itemdelay: Invalid sc group \"%s\" for item id %u.\n"
   Translation: ""
-- Original: "itemdb_read_itemtrade: Invalid item id %d.\n"
+- Original: "itemdb_read_itemtrade: Invalid item id %u.\n"
   Translation: ""
 - Original: "itemdb_read_itemtrade: Invalid override GM level %hu for item id %u.\n"
   Translation: ""
@@ -4048,7 +4044,7 @@ Body:
   Translation: ""
 - Original: "pet data save failure\n"
   Translation: ""
-- Original: "pet does not exist, egg id %d\n"
+- Original: "pet does not exist, egg id %u\n"
   Translation: ""
 - Original: "pet_db reading: Invalid mob-class %hu, pet not read.\n"
   Translation: ""
@@ -4084,7 +4080,7 @@ Body:
   Translation: ""
 - Original: "quest_delete: Character %d doesn't have quest %d.\n"
   Translation: ""
-- Original: "quest_read_db: Invalid item name %hu, drop not read.\n"
+- Original: "quest_read_db: Invalid item name %u, drop not read.\n"
   Translation: ""
 - Original: "quest_read_db: Invalid mob-class %hu, drop not read.\n"
   Translation: ""
