实现 nohomun 地图标记, 用于禁止在指定地图召唤人工生命体

--- a/conf/msg_conf/map_msg_cht.conf
+++ b/conf/msg_conf/map_msg_cht.conf
@@ -34,10 +34,14 @@
 2003: 很抱歉, 當您坐上「商城坐騎」時, 無法使用: %s
 
 // 地圖示記 - nopet
-2004: 目前地圖禁止使用寵物, 已自動將寵物變回寵物蛋狀態.
+2004: 目前地圖禁止使用寵物, 已自動將其變回寵物蛋狀態.
 2005: 很抱歉, 目前地圖禁止召喚寵物.
 
-//2006~2011: 空閑
+// 地圖示記 - nohomun
+2006: 目前地圖禁止使用人工生命體, 已自動將其安息.
+2007: 很抱歉, 目前地圖禁止召喚人工生命體.
+
+//2008~2011: 空閑
 
 // @title
 2012: 使用方法: @title <稱號編號, 若設為 0 則取消稱號>
