--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1759,10 +1759,14 @@
 2003: Sorry, cannot use: %s when you get on the Cash Mount.
 
 // Mapflag - nopet
-2004: Pets are not allowed on this map, return to egg.
+2004: Pets are not allowed on current map, return to egg.
 2005: Sorry, pets are not allowed on this map.
 
-//2006~2011: FREE
+// Mapflag - nohomun
+2006: Homunculus are not allowed on current map, make it rest.
+2007: Sorry, homunculus are not allowed on this map.
+
+//2008~2011: FREE
 
 // @title
 2012: Usage: @title <title_id>
