实现 nomerc 地图标记, 用于禁止在指定地图召唤佣兵

--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1761,13 +1761,17 @@
 
 // Mapflag - nopet
 2004: Pets are not allowed on current map, return to egg.
-2005: Sorry, pets are not allowed on this map.
+2005: Sorry, pets are not allowed on current map.
 
 // Mapflag - nohomun
 2006: Homunculus are not allowed on current map, make it rest.
-2007: Sorry, homunculus are not allowed on this map.
+2007: Sorry, homunculus are not allowed on current map.
 
-//2008~2011: FREE
+// Mapflag - nomerc
+2008: Mercenary are not allowed on current map, make it hidden.
+2009: Sorry, mercenary are not allowed on current map.
+
+//2010~2011: FREE
 
 // @title
 2012: Usage: @title <title_id>
