--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -1748,7 +1748,11 @@
 2006: 当前地图禁止使用人工生命体, 已自动将其安息.
 2007: 很抱歉, 当前地图禁止召唤人工生命体.
 
-//2008~2011: 空闲
+// 地图标记 - nomerc
+2008: 当前地图禁止使用佣兵, 已自动将其隐藏.
+2009: 很抱歉, 当前地图禁止召唤佣兵.
+
+//2010~2011: 空闲
 
 // @title
 2012: 使用方法: @title <称号编号, 若设为 0 则取消称号>
