--- a/conf/msg_conf/map_msg_cht.conf
+++ b/conf/msg_conf/map_msg_cht.conf
@@ -41,7 +41,11 @@
 2006: 目前地圖禁止使用人工生命體, 已自動將其安息.
 2007: 很抱歉, 目前地圖禁止召喚人工生命體.
 
-//2008~2011: 空閑
+// 地圖示記 - nomerc
+2008: 目前地圖禁止使用傭兵, 已自動將其隱藏.
+2009: 很抱歉, 目前地圖禁止召喚傭兵.
+
+//2010~2011: 空閑
 
 // @title
 2012: 使用方法: @title <稱號編號, 若設為 0 則取消稱號>
