--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -875,11 +875,11 @@ Body:
 - Original: "Guild loaded (%d - %s)\n"
   Translation: "已加载公会数据 (公会编号: %d - 公会名称: %s)\n"
 - Original: "Homunculus '%d' has been deleted.\n"
-  Translation: ""
+  Translation: "已删除人工生命体. (生命体编号: %d)\n"
 - Original: "Homunculus data delete failure\n"
-  Translation: ""
+  Translation: "人工生命体数据删除失败.\n"
 - Original: "Homunculus loaded (ID: %d - %s / Class: %d / CID: %d).\n"
-  Translation: ""
+  Translation: "已加载人工生命体信息 (生命体编号: %d - 名称: %s / 类型: %d / 归属角色编号: %d).\n"
 - Original: "IP Sync in progress...\n"
   Translation: ""
 - Original: "If you are using an old version of MySQL consider upgrading to a newer release.\n"
@@ -1091,11 +1091,11 @@ Body:
 - Original: "Mercenary %d has invalid element type %d (max element is %d)\n"
   Translation: ""
 - Original: "Mercenary data delete failure\n"
-  Translation: ""
+  Translation: "佣兵数据删除失败.\n"
 - Original: "Mercenary data save failure\n"
-  Translation: ""
+  Translation: "佣兵数据保存失败.\n"
 - Original: "Mercenary loaded (ID: %d / Class: %d / CID: %d).\n"
-  Translation: ""
+  Translation: "已加载佣兵信息 (佣兵编号: %d / 类型: %d / 归属角色编号: %d).\n"
 - Original: "Message #%d not found for langtype %d [%s], trying fallback...\n"
   Translation: "编号为 #%d 的消息无法从%.0s \"%s\" 中被找到.\n"
 - Original: "Message #%d not found for langtype %d.\n"
