--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -875,11 +875,11 @@ Body:
 - Original: "Guild loaded (%d - %s)\n"
   Translation: "已載入公會資料 (公會編號: %d - 公會名稱: %s)\n"
 - Original: "Homunculus '%d' has been deleted.\n"
-  Translation: ""
+  Translation: "已刪除人工生命體. (生命體編號: %d)\n"
 - Original: "Homunculus data delete failure\n"
-  Translation: ""
+  Translation: "人工生命體資料刪除失敗.\n"
 - Original: "Homunculus loaded (ID: %d - %s / Class: %d / CID: %d).\n"
-  Translation: ""
+  Translation: "已載入人工生命體資訊 (生命體編號: %d - 名稱: %s / 型別: %d / 歸屬角色編號: %d).\n"
 - Original: "IP Sync in progress...\n"
   Translation: ""
 - Original: "If you are using an old version of MySQL consider upgrading to a newer release.\n"
@@ -1091,11 +1091,11 @@ Body:
 - Original: "Mercenary %d has invalid element type %d (max element is %d)\n"
   Translation: ""
 - Original: "Mercenary data delete failure\n"
-  Translation: ""
+  Translation: "傭兵資料刪除失敗.\n"
 - Original: "Mercenary data save failure\n"
-  Translation: ""
+  Translation: "傭兵資料儲存失敗.\n"
 - Original: "Mercenary loaded (ID: %d / Class: %d / CID: %d).\n"
-  Translation: ""
+  Translation: "已載入傭兵資訊 (傭兵編號: %d / 型別: %d / 歸屬角色編號: %d).\n"
 - Original: "Message #%d not found for langtype %d [%s], trying fallback...\n"
   Translation: "編號為 #%d 的訊息無法從%.0s \"%s\" 中被找到.\n"
 - Original: "Message #%d not found for langtype %d.\n"
