精校翻译 atcommands.yml 中的大部分内容

--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -11,6 +11,7 @@
 // 因为熊猫模拟器碰到 UTF8-BOM 编码时, 会在文件读取时进行转码,
 // 而转换的目标编码与运行服务端的操作系统语言有关系
 //--------------------------------------------------------------
+
 // 与GM指令相关的消息
 // -----------------------
 
@@ -257,7 +258,7 @@
 242: 您现在可以被别人猎杀
 243: 地图技能关闭
 244: 地图技能开启
-245: 服务器启动时间: %ld 天, %ld 小时, %ld 分钟, %ld 秒
+245: 服务器已持续运行: %ld 天, %ld 小时, %ld 分钟, %ld 秒
 246: 你的GM层级不允许你完成这个动作
 247: 你不允许传送到这个地图
 248: 你不允许在目前地图传送
@@ -942,9 +943,9 @@
 987: 请输入要升级的数字 (使用方法: @joblvup/@jlevel/@joblvlup <数字等级>).
 
 // @help
-988: There is no help for %c%s.
-989: 帮助指令 %c%s:
-990: 可用的别名:
+988: 很抱歉, 暂时没有关于 %c%s 指令的帮助信息.
+989: ==================== 以下是 %c%s 指令的帮助信息 ====================
+990: 指令的别名:
 
 // @model
 991: 输入改变角色的外观值 (使用方法: @model <发型 ID: %d-%d> <发型颜色: %d-%d> <衣服颜色: %d-%d>).
