--- a/conf/groups.conf
+++ b/conf/groups.conf
@@ -81,205 +81,204 @@ http://rathena.org/board/index.php?showtopic=58877
 
 groups: (
 {
-	id: 0 /* 0 = 每个新账户的初始等级，代表普通玩家组 */
-	name: "Player"
+	id: 0 								// 分组编号 0 - 这是每个新账户的初始等级
+	name: "普通玩家"					// Player - 普通玩家
 	level: 0
-	inherit: ( /*empty list*/ )
+	inherit: ( /* 空 */ )				// 放空表示不继承任何其他分组的设置
 	commands: {
-		changedress: true
-		resurrect: true
+		changedress: true				// 准许使用 @changedress 指令
+		resurrect: true					// 准许使用 @resurrect 指令
 	}
 	permissions: {
-		/* 没有这个权限，玩家就不能交易或组队*/
-		can_trade: true
-		can_party: true
-		attendance: true
+		can_trade: true					// 授予交易权限
+		can_party: true					// 授予组队权限
+		attendance: true				// 授予签到系统的使用权限
 	}
 },
 {
-	id: 1
-	name: "Super Player"
-	inherit: ( "Player" ) /* 包含Player的权限 */
+	id: 1								// 分组编号 1
+	name: "超级玩家"					// Super Player - 超级玩家
+	inherit: ( "普通玩家" ) 			// [超级玩家]默认继承[普通玩家]的所有设置
 	level: 0
 	commands: {
-		/* 可用命令 */
-		commands: true				//显示所有可用命令
-		charcommands: true			//显示可用的角色相关命令
-		help: true					//显示命令相关帮助
-		rates: true					//显示服务器经验值设置
-		uptime: true				//显示服务器启动时间
-		showdelay: true				//显示 "技能使用延迟"的提示
-		exp: true					//显示当前等级和经验值
-		mobinfo: true				//显示魔物信息
-		iteminfo: true				//显示道具信息
-		whodrops: true				//显示掉落信息
-		time: true					//显示服务器时间
-		jailtime: true				//显示剩余监禁时间
-		hominfo: true				//显示人工生命体信息
-		homstats: true				//显示人工生命体属性
-		showexp: true				//显示 获得的经验值
-		showzeny: true				//显示 获得的Zeny
-		whereis: true				//显示魔物位置
-		/* feature commands */		
-		refresh: true				
-		noask: true					//自动拒绝邀请
+		/* 查询型指令 */
+		commands: true					// 准许使用 @commands 指令, 用于显示所有可用命令
+		charcommands: true				// 准许使用 @charcommands 指令, 用于显示所有可用的角色命令
+		help: true						// 准许使用 @help 指令, 用于显示命令相关帮助
+		rates: true						// 准许使用 @rates 指令, 用于显示服务器经验值设置
+		uptime: true					// 准许使用 @uptime 指令, 用于显示服务器启动时间
+		showdelay: true					// 准许使用 @showdelay 指令, 用于显示 "技能使用延迟"的提示
+		exp: true						// 准许使用 @exp 指令, 用于显示当前等级和经验值
+		mobinfo: true					// 准许使用 @mobinfo 指令, 用于显示魔物信息
+		iteminfo: true					// 准许使用 @iteminfo 指令, 用于显示道具信息
+		whodrops: true					// 准许使用 @whodrops 指令, 用于显示掉落信息
+		time: true						// 准许使用 @time 指令, 用于显示服务器时间
+		jailtime: true					// 准许使用 @jailtime 指令, 用于显示剩余监禁时间
+		hominfo: true					// 准许使用 @hominfo 指令, 用于显示人工生命体信息
+		homstats: true					// 准许使用 @homstats 指令, 用于显示人工生命体属性
+		showexp: true					// 准许使用 @showexp 指令, 用于显示 获得的经验值
+		showzeny: true					// 准许使用 @showzeny 指令, 用于显示 获得的Zeny
+		whereis: true					// 准许使用 @whereis 指令, 用于显示魔物位置
+		/* 功能型指令 */		
+		refresh: true					// 准许使用 @refresh 指令, 用于刷新客户端数据
+		noask: true						// 准许使用 @noask 指令, 用于自动拒绝邀请
 		noks: true					
-		autoloot: true				//自动拾取物品
-		alootid: true				//自动拾取指定物品
-		autoloottype: true			//自动拾取指定类型物品
-		autotrade: true				//离线挂店
-		request: true				//发消息给在线GM
-		go: true					//传送到主要城市
-		breakguild: true
-		channel: true
+		autoloot: true					// 准许使用 @autoloot 指令, 用于自动拾取物品
+		alootid: true					// 准许使用 @alootid 指令, 用于自动拾取指定物品
+		autoloottype: true				// 准许使用 @autoloottype 指令, 用于自动拾取指定类型物品
+		autotrade: true					// 准许使用 @autotrade 指令, 用于离线挂店
+		request: true					// 准许使用 @request 指令, 用于发消息给在线GM
+		go: true						// 准许使用 @go 指令, 用于传送到主要城市
+		breakguild: true				// 准许使用 @breakguild 指令, 用于解散公会(会长可用)
+		channel: true					// 准许使用 @channel 指令, 用于使用聊天频道系统
 		/* langtype: true */
 	}
 	permissions: {
-		attendance: false
+		attendance: false				// 禁止签到系统的使用权限
 	}
 },
 {
-	id: 2
-	name: "Support"
-	inherit: ( "Super Player" )
+	id: 2								// 分组编号 2
+	name: "客服人员"					// Support - 客服人员
+	inherit: ( "超级玩家" )				// [客服人员]默认继承[超级玩家]的所有设置
 	level: 1
 	commands: {
-		version: true				//显示服务器SVN版本号
-		where: true					//显示角色的位置
-		jumpto: true				//瞬移到指定角色身边
-		who: true					//显示在线玩家
-		who2: true					//显示在线玩家职业
-		who3: true					//显示在线玩家队伍和工会
-		whomap: true				//显示当前地图在线玩家
-		whomap2: true				//显示当前地图在线玩家职业
-		whomap3: true				//显示当前地图在线玩家队伍和工会
-		users: true					//显示玩家的分布地图
-		broadcast: true				//广播
-		localbroadcast: true		//在当前地图广播
+		version: true					// 准许使用 @version 指令, 用于显示服务器SVN版本号
+		where: true						// 准许使用 @where 指令, 用于显示角色的位置
+		jumpto: true					// 准许使用 @jumpto 指令, 用于瞬移到指定角色身边
+		who: true						// 准许使用 @who 指令, 用于显示在线玩家
+		who2: true						// 准许使用 @who2 指令, 用于显示在线玩家职业
+		who3: true						// 准许使用 @who3 指令, 用于显示在线玩家队伍和工会
+		whomap: true					// 准许使用 @whomap 指令, 用于显示当前地图在线玩家
+		whomap2: true					// 准许使用 @whomap2 指令, 用于显示当前地图在线玩家职业
+		whomap3: true					// 准许使用 @whomap3 指令, 用于显示当前地图在线玩家队伍和工会
+		users: true						// 准许使用 @users 指令, 用于显示玩家的分布地图
+		broadcast: true					// 准许使用 @broadcast 指令, 用于进行全服广播
+		localbroadcast: true			// 准许使用 @localbroadcast 指令, 用于在当前地图广播
 	}
-	log_commands: true
+	log_commands: true					// 记录使用指令的情况到日志数据库中 (以便审计)
 	permissions: {
 		receive_requests: true
 		view_equipment: true
 	}
 },
 {
-	id: 3
-	name: "Script Manager"
-	inherit: ( "Support" )
+	id: 3								// 分组编号 3
+	name: "脚本管理员"					// Script Manager - 脚本管理员
+	inherit: ( "客服人员" )				// [脚本管理员]默认继承[客服人员]的所有设置
 	level: 1
 	commands: {
-		tonpc: true					//传送至NPC
-		hidenpc: true				//隐藏NPC
-		shownpc: true				//显示NPC
-		loadnpc: true				//加载NPC
-		unloadnpc: true				//卸载NPC
-		npcmove: true				//移动NPC
-		addwarp: true				//添加临时传送点
+		tonpc: true						// 准许使用 @tonpc 指令, 用于传送至NPC
+		hidenpc: true					// 准许使用 @hidenpc 指令, 用于隐藏NPC
+		shownpc: true					// 准许使用 @shownpc 指令, 用于显示NPC
+		loadnpc: true					// 准许使用 @loadnpc 指令, 用于加载NPC
+		unloadnpc: true					// 准许使用 @unloadnpc 指令, 用于卸载NPC
+		npcmove: true					// 准许使用 @npcmove 指令, 用于移动NPC
+		addwarp: true					// 准许使用 @addwarp 指令, 用于添加临时传送点
 	}
-	log_commands: true
+	log_commands: true					// 记录使用指令的情况到日志数据库中 (以便审计)
 	permissions: {
 		any_warp: true
 	}
 },
 {
-	id: 4
-	name: "Event Manager"
-	inherit: ( "Support" )
+	id: 4								// 分组编号 4
+	name: "活动管理员"					// Event Manager - 活动管理员
+	inherit: ( "客服人员" )				// [活动管理员]默认继承[客服人员]的所有设置
 	level: 1
 	commands: {
-		monster: true				//召唤魔物
-		monstersmall: true			//召唤魔物(缩小版)
-		monsterbig: true			//召唤魔物(放大版)
-		killmonster2: true			//杀死当前地图魔物(不会掉落物品)
+		monster: true					// 准许使用 @monster 指令, 用于召唤魔物
+		monstersmall: true				// 准许使用 @monstersmall 指令, 用于召唤魔物(缩小版)
+		monsterbig: true				// 准许使用 @monsterbig 指令, 用于召唤魔物(放大版)
+		killmonster2: true				// 准许使用 @killmonster2 指令, 用于杀死当前地图魔物(不会掉落物品)
 		cleanarea: true				
 		cleanmap: true
-		item: [true, true]			//创造物品
-		zeny: [true, true]			//修改Zeny
-		disguise: [true, true]		//变换玩家为魔物外观
-		undisguise: [true, true]	//恢复玩家外观
-		size: [true, true]			//改变玩家大小
-		raise: true					//复活服务器全部玩家
-		raisemap: true				//复活当前地图全部玩家
-		day: true					//改为白天
-		night: true					//改为黑夜
-		skillon: true				//允许当前地图使用技能
-		skilloff: true				//禁止当前地图使用技能
-		pvpon: true					//当前地图开启PVP
-		pvpoff: true				//当前地图关闭PVP
-		gvgon: true					//当前地图开启工会战
-		gvgoff: true				//当前地图关闭工会战
-		allowks: true				//当前地图开启抢怪保护
-		me: true					//显示消息
-		marry: true					//结婚
-		divorce: true				//离婚
+		item: [true, true]				// 准许使用 @item 指令, 用于创造物品
+		zeny: [true, true]				// 准许使用 @zeny 指令, 用于修改Zeny
+		disguise: [true, true]			// 准许使用 @disguise 指令, 用于变换玩家为魔物外观
+		undisguise: [true, true]		// 准许使用 @undisguise 指令, 用于恢复玩家外观
+		size: [true, true]				// 准许使用 @size 指令, 用于改变玩家大小
+		raise: true						// 准许使用 @raise 指令, 用于复活服务器全部玩家
+		raisemap: true					// 准许使用 @raisemap 指令, 用于复活当前地图全部玩家
+		day: true						// 准许使用 @day 指令, 用于改为白天
+		night: true						// 准许使用 @night 指令, 用于改为黑夜
+		skillon: true					// 准许使用 @skillon 指令, 用于允许当前地图使用技能
+		skilloff: true					// 准许使用 @skilloff 指令, 用于禁止当前地图使用技能
+		pvpon: true						// 准许使用 @pvpon 指令, 用于当前地图开启PVP
+		pvpoff: true					// 准许使用 @pvpoff 指令, 用于当前地图关闭PVP
+		gvgon: true						// 准许使用 @gvgon 指令, 用于当前地图开启工会战
+		gvgoff: true					// 准许使用 @gvgoff 指令, 用于当前地图关闭工会战
+		allowks: true					// 准许使用 @allowks 指令, 用于当前地图开启抢怪保护
+		me: true						// 准许使用 @me 指令, 用于显示消息
+		marry: true						// 准许使用 @marry 指令, 用于结婚
+		divorce: true					// 准许使用 @divorce 指令, 用于离婚
 		refreshall: true
 	}
-	log_commands: true
+	log_commands: true					// 记录使用指令的情况到日志数据库中 (以便审计)
 	permissions: {
-		can_trade: false
-		any_warp: true
+		can_trade: false				// 禁止执行任何交易
+		any_warp: true					// 授予能够随意传送的权限
 	}
 },
 {
-	id: 5
-	name: "VIP"
-	inherit: ( "Player" ) /* 包含Player的权限 */
+	id: 5								// 分组编号 5
+	name: "VIP 玩家"					// VIP - VIP 玩家
+	inherit: ( "普通玩家" )				// [VIP 玩家]默认继承[普通玩家]的所有设置
 	level: 0
 	commands: {
-		rates: true
-		who: true
+		rates: true						// 准许使用 @rates 指令, 用于显示服务器经验值设置
+		who: true						// 准许使用 @who 指令, 用于显示在线玩家
 	}
 	permissions: {
-		/* no permissions by default */
+		/* 空 */						// 默认没有任何特殊权限
 	}
 },
 {
-	id: 10
-	name: "Law Enforcement"
-	inherit: ( "Support" )
+	id: 10								// 分组编号 10
+	name: "执法人员"					// Law Enforcement - 执法人员
+	inherit: ( "客服人员" )				// [执法人员]默认继承[客服人员]的所有设置
 	level: 2
 	commands: {
-		hide: true					//隐身
-		follow: true				//跟随指定玩家
-		kick: true					//强制指定玩家下线
-		disguise: true				//改变玩家为魔物外观
-		fakename: true				//暂时改变角色名称
-		option: true				
-		speed: true					//改变移动速度
-		warp: true					//传送到指定地图
-		kill: true					//杀死指定玩家
-		recall: true				//召唤指定玩家到身边
-		ban: true					//冻结指定玩家一段时间
-		block: true					//冻结指定玩家
-		jail: true					//将玩家送入监狱
-		jailfor: true				//将玩家监禁一段时间
-		mute: true					//将玩家禁言
-		storagelist: true			//显示玩家仓库物品
-		cartlist: true				//显示玩家手推车物品
-		itemlist: true				//显示玩家背包物品
-		stats: true					//显示玩家属性
+		hide: true						// 准许使用 @hide 指令, 用于隐身
+		follow: true					// 准许使用 @follow 指令, 用于跟随指定玩家
+		kick: true						// 准许使用 @kick 指令, 用于强制指定玩家下线
+		disguise: true					// 准许使用 @disguise 指令, 用于改变玩家为魔物外观
+		fakename: true					// 准许使用 @fakename 指令, 用于暂时改变角色名称
+		option: true
+		speed: true						// 准许使用 @speed 指令, 用于改变移动速度
+		warp: true						// 准许使用 @warp 指令, 用于传送到指定地图
+		kill: true						// 准许使用 @kill 指令, 用于杀死指定玩家
+		recall: true					// 准许使用 @recall 指令, 用于召唤指定玩家到身边
+		ban: true						// 准许使用 @ban 指令, 用于冻结指定玩家一段时间
+		block: true						// 准许使用 @block 指令, 用于冻结指定玩家
+		jail: true						// 准许使用 @jail 指令, 用于将玩家送入监狱
+		jailfor: true					// 准许使用 @jailfor 指令, 用于将玩家监禁一段时间
+		mute: true						// 准许使用 @mute 指令, 用于将玩家禁言
+		storagelist: true				// 准许使用 @storagelist 指令, 用于显示玩家仓库物品
+		cartlist: true					// 准许使用 @cartlist 指令, 用于显示玩家手推车物品
+		itemlist: true					// 准许使用 @itemlist 指令, 用于显示玩家背包物品
+		stats: true						// 准许使用 @stats 指令, 用于显示玩家属性
 	}
-	log_commands: true
+	log_commands: true					// 记录使用指令的情况到日志数据库中 (以便审计)
 	permissions: {
 		join_chat: true
 		kick_chat: true
 		hide_session: true
 		who_display_aid: true
 		hack_info: true
-		any_warp: true
-		view_hpmeter: true
+		any_warp: true					// 授予能够随意传送的权限
+		view_hpmeter: true				// 授予查看其它玩家血条的权限
 	}
 },
 {
-	id: 99
-	name: "Admin"
+	id: 99								// 分组编号 99
+	name: "超级管理员"					// Admin - 超级管理员
 	level: 99
-	inherit: ( "Support", "Law Enforcement" )
+	inherit: ( "客服人员", "执法人员" )	// [超级管理员]默认继承[客服人员]和[执法人员]的所有设置
 	commands: {
-		/* not necessary due to all_commands: true */
+		/* 空 */						// 被赋予 all_commands 权限后这里可以不填
 	}
-	log_commands: true
+	log_commands: true					// 记录使用指令的情况到日志数据库中 (以便审计)
 	permissions: {
 		can_trade: true
 		can_party: true
@@ -289,12 +288,12 @@ groups: (
 		skill_unconditional: false
 		use_check: true
 		use_changemaptype: true
-		all_commands: true
+		all_commands: true				// 授予能够执行全部指令的超级权限
 		channel_admin: true
-		can_trade_bounded: true
+		can_trade_bounded: true			// 授予能够交易绑定道具的权限
 		item_unconditional: false
 		bypass_stat_onclone: true
-		bypass_max_stat: true
+		bypass_max_stat: true			// 授予能够绕过最大素质点上限的权限
 		/* all_permission: true */
 	}
 }
