根据 cRO 和 twRO 的标准分别翻译不同的职业名称

--- a/conf/msg_conf/char_msg_chs.conf
+++ b/conf/msg_conf/char_msg_chs.conf
@@ -11,7 +11,7 @@
 // 因为熊猫模拟器碰到 UTF8-BOM 编码时, 会在文件读取时进行转码,
 // 而转换的目标编码与运行服务端的操作系统语言有关系
 //--------------------------------------------------------------
-0: 初心者
+0: 初学者
 1: 剑士
 2: 魔法师
 3: 弓箭手
@@ -28,15 +28,15 @@
 14: 武僧
 15: 贤者
 16: 流氓
-17: 炼金术师
+17: 炼金术士
 18: 诗人
 19: 舞娘
-20: 结婚礼服
-21: 超级初心者
-22: 枪手
+20: 服装-婚礼
+21: 超级初学者
+22: 神枪手
 23: 忍者
-24: 圣诞节服装
-25: 进阶初心者
+24: 服装-圣诞节
+25: 进阶初学者
 26: 进阶剑士
 27: 进阶魔法师
 28: 进阶弓箭手
@@ -60,7 +60,7 @@
 43: 搞笑艺人
 //43: Minstrel //IRO Name
 44: 冷艳舞姬
-45: 初心者宝宝
+45: 初学者宝宝
 46: 剑士宝宝
 47: 魔法师宝宝
 48: 弓箭手宝宝
@@ -77,106 +77,106 @@
 59: 武僧宝宝
 60: 贤者宝宝
 61: 流氓宝宝
-62: 炼金术师宝宝
+62: 炼金术士宝宝
 63: 诗人宝宝
 64: 舞娘宝宝
-65: 超级初心者宝宝
-66: 跆拳少年
+65: 超级初学者宝宝
+66: 跆拳道
 67: 拳圣
-68: 灵媒
-//69 free
-//70 free
-71: 夏日服装
+68: 悟灵士
+//79: FREE
+//70: FREE
+71: 服装-盛夏
 72: Gangsi
 73: 死亡骑士
 74: 黑暗收集者
-75: 卢恩骑士
+75: 符文骑士
 76: 大法师
 77: 游侠
 78: 大主教
 79: 机匠
-80: 十字斩首者
+80: 十字切割者
 81: 皇家卫士
 82: 元素使
 83: 宫廷乐师
 //83: Maestro //IRO Name
-84: 浪姬舞者
+84: 漫游舞者
 85: 修罗
 86: 基因学者
 //86: Geneticist //IRO Name
-87: 魅影追踪者
-88: 卢恩骑士宝宝
+87: 逐影
+88: 符文骑士宝宝
 89: 大法师宝宝
 90: 游侠宝宝
 91: 大主教宝宝
 92: 机匠宝宝
-93: 十字斩首者宝宝
+93: 十字切割者宝宝
 94: 皇家卫士宝宝
 95: 元素使宝宝
 96: 宫廷乐师宝宝
-97: 浪姬舞者宝宝
+97: 漫游舞者宝宝
 98: 修罗宝宝
 99: 基因学者宝宝
-100: 魅影追踪者宝宝
-101: 进阶超级初心者
-102: 进阶超级初心者宝宝
+100: 逐影宝宝
+101: 进阶超级初学者
+102: 进阶超级初学者宝宝
 103: 影狼
 104: 胧
-105: 韩服
+105: 服装-韩服
 106: 反叛者
-107: 啤酒节
+107: 服装-啤酒节
 108: 召唤师
-109: 宝宝召唤师
-110: 宝宝忍者
-111: 宝宝影狼
-112: 宝宝胧
-113: 宝宝跆拳道
-114: 宝宝明星斗士
-115: 宝宝悟灵士
-116: 宝宝枪手
-117: 宝宝反叛者
-118: 贤者
-119: 灵魂收割者
-120: 宝宝星星皇帝
-121: 宝宝灵魂收割者
+109: 召唤师宝宝
+110: 忍者宝宝
+111: 影狼宝宝
+112: 胧宝宝
+113: 跆拳道宝宝
+114: 拳圣宝宝
+115: 悟灵士宝宝
+116: 神枪手宝宝
+117: 反叛者宝宝
+118: 拳皇
+119: 猎灵士
+120: 拳皇宝宝
+121: 猎灵士宝宝
 
 199: 未知职业
 
-//拍卖
-200: 拍卖经理
-201: 拍卖
-202: 谢谢，您赢得了拍卖！
-203: 请为您的拍卖付款
+//Auction
+200: Auction Manager
+201: Auction
+202: Thanks, you won the auction!.
+203: Payment for your auction!.
 204: No buyers have been found for your auction.
-205: 拍卖取消。
-206: 拍卖关闭。
-207: 拍卖获胜者
-208: 有人出了更高的价格
-209: 您出了更高高的价格
-210: 您赢得了拍卖。
-211: 请为您的拍卖付款
+205: Auction canceled.
+206: Auction closed.
+207: Auction winner.
+208: Someone has placed a higher bid.
+209: You have placed a higher bid.
+210: You have won the auction.
+211: Payment for your auction!.
 
 // @accountinfo
-212: No matches were found for your criteria, '%s'
-213: An error occured, bother your admin about it.
-214: Your query returned the following %d results, please be more specific...
-215: [AID: %d] %s | %s | 等级: %d/%d | %s
-216: 没有找到ID为 '%d' 的账号.
-217: -- 账号 %d --
-218: 用户: %s | GM等级: %d | State: %d
+212: 根据您提供的关键词 “%s” 无法找到任何匹配的账号
+213: 很抱歉, 发生错误, 请联系您的游戏管理员反馈此问题.
+214: 找到了 %d 个匹配的查询结果, 请指定更详细的搜索关键词...
+215: [账号编号: %d] %s | %s | 等级: %d/%d | %s
+216: 很抱歉, 无法找到编号为 '%d' 的账号
+217: -- 账号编号 %d ----------------------------------------------
+218: 用户名: %s | GM 组别: %d | 状态: %d
 //219: FREE
 //220: FREE
-221: 账号 邮箱: %s | 生日: %s
-222: 最后登录 IP: %s (%s)
-223: This user has logged in %d times, the last time was at %s
-224: -- 角色详情 --
-225: [Slot/CID: %d/%d] %s | %s | 等级: %d/%d | %s
-226: 此账号内没有角色
+221: 账号邮箱: %s | 生日: %s
+222: 最后一次登录的 IP 地址: %s (%s)
+223: 此账号登陆过 %d 次, 最后一次登录时间为 %s
+224: -- 角色的详细资料 ------------------------------------------------
+225: [第 %d 号槽位 | 角色编号: %d] %s | %s | 等级: %d/%d | %s
+226: 此账号里面一个角色都没有, 是一个空账号
 
-// 成就
+// Achievements
 227: GM
-228: 成就奖励邮件
-229: [%s] 成就奖励
+228: Achievement Reward Mail
+229: [%s] Achievement Reward.
 
 // =============================================================
 // 熊猫模拟器拓展的消息 - 开始
