--- a/conf/msg_conf/char_msg_cht.conf
+++ b/conf/msg_conf/char_msg_cht.conf
@@ -11,3 +11,182 @@
 // 因為熊貓模擬器碰到 UTF8-BOM 編碼時, 會在檔案讀取時進行轉碼,
 // 而轉換的目標編碼與運行伺服器的作業系統語言有關係
 //--------------------------------------------------------------
+0: 初心者
+1: 劍士
+2: 魔法師
+3: 弓箭手
+4: 服事
+5: 商人
+6: 盜賊
+7: 騎士
+8: 祭司
+9: 巫師
+10: 鐵匠
+11: 獵人
+12: 刺客
+13: 十字軍
+14: 武道家
+15: 賢者
+16: 流氓
+17: 煉金術師
+18: 吟遊詩人
+19: 舞孃
+20: 服裝-婚禮
+21: 超級初心者
+22: 神槍手
+23: 忍者
+24: 服裝-聖誕節
+25: 進階初心者
+26: 進階劍士
+27: 進階魔法師
+28: 進階弓箭手
+29: 進階服事
+30: 進階商人
+31: 進階盜賊
+32: 騎士領主
+33: 神官
+34: 超魔導師
+35: 神工匠
+//35: Mastersmith //IRO name
+36: 神射手
+37: 十字刺客
+38: 聖殿十字軍
+39: 武術宗師
+40: 智者
+//40: Scholar //IRO name
+41: 神行太保
+42: 創造者
+//42: Biochemist //IRO Name
+43: 搞笑藝人
+//43: Minstrel //IRO Name
+44: 冷艷舞姬
+45: 初心者寶寶
+46: 劍士寶寶
+47: 魔法師寶寶
+48: 弓箭手寶寶
+49: 服事寶寶
+50: 商人寶寶
+51: 盜賊寶寶
+52: 騎士寶寶
+53: 祭司寶寶
+54: 巫師寶寶
+55: 鐵匠寶寶
+56: 獵人寶寶
+57: 刺客寶寶
+58: 十字軍寶寶
+59: 武僧寶寶
+60: 賢者寶寶
+61: 流氓寶寶
+62: 煉金術師寶寶
+63: 吟遊詩人寶寶
+64: 舞孃寶寶
+65: 超級初心者寶寶
+66: 跆拳少年
+67: 拳聖
+68: 悟靈士
+//79: FREE
+//70: FREE
+71: 服裝-盛夏
+72: Gangsi
+73: 死亡騎士
+74: 黑暗收集者
+75: 盧恩騎士
+76: 咒術士
+77: 遊俠
+78: 大主教
+79: 機械工匠
+80: 十字斬首者
+81: 皇家禁衛隊
+82: 妖術師
+83: 宮廷樂師
+//83: Maestro //IRO Name
+84: 浪姬舞者
+85: 修羅
+86: 基因學者
+//86: Geneticist //IRO Name
+87: 魅影追蹤者
+88: 盧恩騎士寶寶
+89: 咒術士寶寶
+90: 遊俠寶寶
+91: 大主教寶寶
+92: 機械工匠寶寶
+93: 十字斬首者寶寶
+94: 皇家禁衛隊寶寶
+95: 妖術師寶寶
+96: 宮廷樂師寶寶
+97: 浪姬舞者寶寶
+98: 修羅寶寶
+99: 基因學者寶寶
+100: 魅影追蹤者寶寶
+101: 進階超級初心者
+102: 進階超級初心者寶寶
+103: 影狼
+104: 朧
+105: 服裝-韓服
+106: 反叛者
+107: 服裝-啤酒節
+108: 召喚師
+109: 召喚師寶寶
+110: 忍者寶寶
+111: 影狼寶寶
+112: 朧寶寶
+113: 跆拳少年寶寶
+114: 拳聖寶寶
+115: 悟靈士寶寶
+116: 神槍手寶寶
+117: 反叛者寶寶
+118: 拳皇
+119: 獵靈士
+120: 拳皇寶寶
+121: 獵靈士寶寶
+
+199: 未知職業
+
+//Auction
+200: Auction Manager
+201: Auction
+202: Thanks, you won the auction!.
+203: Payment for your auction!.
+204: No buyers have been found for your auction.
+205: Auction canceled.
+206: Auction closed.
+207: Auction winner.
+208: Someone has placed a higher bid.
+209: You have placed a higher bid.
+210: You have won the auction.
+211: Payment for your auction!.
+
+// @accountinfo
+212: 根據您提供的關鍵詞 「%s」 無法找到任何匹配的賬號
+213: 很抱歉, 發生錯誤, 請聯繫您的遊戲管理員反饋此問題.
+214: 找到了 %d 個匹配的查詢結果, 請指定更詳細的搜索關鍵詞...
+215: [賬號編號: %d] %s | %s | 等級: %d/%d | %s
+216: 很抱歉, 無法找到編號為 '%d' 的賬號
+217: -- 賬號編號 %d ----------------------------------------------
+218: 使用者名稱: %s | GM 組別: %d | 狀態: %d
+//219: FREE
+//220: FREE
+221: 賬號郵箱: %s | 生日: %s
+222: 最後一次登錄的 IP 地址: %s (%s)
+223: 此賬號登陸過 %d 次, 最後一次登錄時間為 %s
+224: -- 角色的詳細資料 ------------------------------------------------
+225: [第 %d 號槽位 | 角色編號: %d] %s | %s | 等級: %d/%d | %s
+226: 此賬號裡面一個角色都沒有, 是一個空賬號
+
+// Achievements
+227: GM
+228: Achievement Reward Mail
+229: [%s] Achievement Reward.
+
+// =============================================================
+// 熊貓模擬器拓展的訊息 - 開始
+// =============================================================
+
+// 建立公會時候預設的職位名稱
+2000: 會長大人
+2001: 第 %d 級會員
+2002: 可愛萌新
+
+// =============================================================
+// 熊貓模擬器拓展的訊息 - 結束
+// =============================================================
