实现角色光环机制的初始版本

--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1774,7 +1774,7 @@
 //2010~2011: FREE
 
 // @title
-2012: Usage: @title <title_id>
+2012: Usage: @title <title_id, set 0 to turn it off>
 2013: The comparison table of title ID and title is located on the client: data\luafiles514\lua files\datainfo\titletable.lub
 2014: The title has been replaced.
 2015: The title has been cancelled.
@@ -1842,13 +1842,23 @@
 2090: Renewal
 2091: Null
 
-//2092-2094 free
+//2092-2094 FREE
 
 // Mapflag - nomail
 2095: Mailbox or RODEX is prohibited on this map!
 
+//2096-2099 FREE
+
 // @mapinfo
 2100: Pandas exclusive mapflag:
+
+// @aura
+2101: Usage: @aura <aura_id, set 0 to turn it off>
+2102: Active the aura effect defined in db/auras_db.yml.
+2103: Aura has been Actived.
+2104: Aura has been turn off.
+2105: Sorry, the specified aura id is invalid, nothing will be change at this time.
+2106: Aura database has been reloaded.
 
 // =============================================================
 // Pandas Extend Message - End
