--- a/conf/msg_conf/map_msg_cht.conf
+++ b/conf/msg_conf/map_msg_cht.conf
@@ -126,8 +126,18 @@
 // 地圖示記 - nomail
 2095: 此地圖禁止使用郵箱及其相關功能, 請離開此地圖後重試.
 
+//2096-2099 閑置
+
 // @mapinfo
 2100: 熊貓地圖示記:
+
+// @aura
+2101: 使用方法: @aura <光環編號, 若設為 0 則取消光環>
+2102: 光環編號定義在 db/auras_db.yml 的光環組合數據庫中, 更多資訊請檢視數據庫頂部的註釋.
+2103: 已啟用指定的光環效果.
+2104: 已關閉光環效果.
+2105: 很抱歉, 指定的光環編號無效, 請檢查後重新輸入.
+2106: 已重新載入光環數據庫
 
 // =============================================================
 // 熊貓模擬器拓展的訊息 - 結束
