--- a/src/map/map-server.vcxproj
+++ b/src/map/map-server.vcxproj
@@ -181,6 +181,7 @@
   <ItemGroup>
     <ClInclude Include="achievement.hpp" />
     <ClInclude Include="atcommand.hpp" />
+    <ClInclude Include="aura.hpp" />
     <ClInclude Include="battle.hpp" />
     <ClInclude Include="battleground.hpp" />
     <ClInclude Include="buyingstore.hpp" />
@@ -235,6 +236,7 @@
   <ItemGroup>
     <ClCompile Include="achievement.cpp" />
     <ClCompile Include="atcommand.cpp" />
+    <ClCompile Include="aura.cpp" />
     <ClCompile Include="battle.cpp" />
     <ClCompile Include="battleground.cpp" />
     <ClCompile Include="buyingstore.cpp" />
