--- a/src/map/map-server.vcxproj.filters
+++ b/src/map/map-server.vcxproj.filters
@@ -170,6 +170,9 @@
     <ClInclude Include="suspend.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="aura.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="achievement.cpp">
@@ -308,6 +311,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="suspend.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="aura.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
