完善光环机制相关的指令文档

--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -1845,7 +1845,7 @@
 2103: 已激活指定的光环效果.
 2104: 已关闭光环效果.
 2105: 很抱歉, 指定的光环编号无效, 请检查后重新输入.
-2106: 已重新加载光环数据库
+2106: 已重新加载光环组合数据库
 
 // =============================================================
 // 熊猫模拟器拓展的消息 - 结束
