--- a/conf/msg_conf/map_msg_cht.conf
+++ b/conf/msg_conf/map_msg_cht.conf
@@ -137,7 +137,7 @@
 2103: 已啟用指定的光環效果.
 2104: 已關閉光環效果.
 2105: 很抱歉, 指定的光環編號無效, 請檢查後重新輸入.
-2106: 已重新載入光環數據庫
+2106: 已重新載入光環組合數據庫
 
 // =============================================================
 // 熊貓模擬器拓展的訊息 - 結束
