实现能够支持多种单位的持久光环机制 (#324)
* 实现角色光环机制的初始版本

* 提交缺失的 import 模板文件

* 完善光环机制相关的指令文档

* 变更 noaura 地图标记时能刷新地图上的玩家

* 完善光环组合数据库的说明信息

* 实现 unitaura 脚本指令, 可对多种单位设置光环

* 支持 setunitdata 和 getunitdata 为多种单位读取/设置光环

--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -1834,8 +1834,18 @@
 // 地图标记 - nomail
 2095: 此地图禁止使用邮箱及其相关功能, 请离开此地图后重试.
 
+//2096-2099 闲置
+
 // @mapinfo
 2100: 熊猫地图标记:
+
+// @aura
+2101: 使用方法: @aura <光环编号, 若设为 0 则取消光环>
+2102: 光环编号定义在 db/auras_db.yml 的光环组合数据库中, 更多信息请查看数据库顶部的注释.
+2103: 已激活指定的光环效果.
+2104: 已关闭光环效果.
+2105: 很抱歉, 指定的光环编号无效, 请检查后重新输入.
+2106: 已重新加载光环组合数据库
 
 // =============================================================
 // 熊猫模拟器拓展的消息 - 结束
