完善终端汉化数据库中的部分信息汉化

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -130,6 +130,8 @@ Body:
   Translation: ""
 - Original: " NightmareDrop |"
   Translation: ""
+- Original: " NoAura |"
+  Translation: ""
 - Original: " NoAutoLoot |"
   Translation: ""
 - Original: " NoBaseEXP |"
@@ -313,6 +315,8 @@ Body:
 - Original: "%s: fatal error ! player not attached!\n"
   Translation: ""
 - Original: "%s: not enough arguments for %s! Skipping...\n"
+  Translation: ""
+- Original: "%s: throw regex_error : %s\n"
   Translation: ""
 - Original: "%s: variable '%s' for GameID is not a server variable, but no player is attached!\n"
   Translation: ""
@@ -724,6 +728,8 @@ Body:
   Translation: "已经完成 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 限购超市的数据校验, 若未报错则检测通过.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
   Translation: "已加载 [{CL_WHITE}]%d[{CL_RESET}] 个脚本, 里面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个传送点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个刷怪点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物已被缓存\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物未被缓存\n"
+- Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n\tThis operation took %[{PRIu64}] milliseconds in total\n"
+  Translation: "已加载 [{CL_WHITE}]%d[{CL_RESET}] 个脚本, 里面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个传送点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个刷怪点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物已被缓存\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物未被缓存\n\t此次加载脚本共计耗时 %[{PRIu64}] 毫秒\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' buyingstore autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
   Translation: "已读取 [{CL_WHITE}]%d[{CL_RESET}] 位离线采购的玩家, 全服共计 [{CL_WHITE}]%d[{CL_RESET}] 个待采道具.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' entries for '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets from '[{CL_WHITE}]%s[{CL_RESET}]' table.\n"
@@ -1174,8 +1180,8 @@ Body:
   Translation: "已保存队伍信息 (队伍编号: %d - 队伍名称: %s).\n"
 - Original: "Party loaded (%d - %s).\n"
   Translation: "已加载队伍信息 (队伍编号: %d - 队伍名称: %s).\n"
-- Original: "Performance counter [{CL_WHITE}]'%s'[{CL_RESET}] fired %[{PRIuPTR}] times, took [{CL_WHITE}]%[{PRIuPTR}][{CL_RESET}] ms\n"
-  Translation: "性能计数器 [{CL_WHITE}]'%s'[{CL_RESET}] 触发了 %[{PRIuPTR}] 次, 总计耗时 [{CL_WHITE}]%[{PRIuPTR}][{CL_RESET}] 毫秒\n"
+- Original: "Performance counter [{CL_WHITE}]'%s'[{CL_RESET}] fired %[{PRIu64}] times, took [{CL_WHITE}]%[{PRIu64}][{CL_RESET}] ms\n"
+  Translation: "性能计数器 [{CL_WHITE}]'%s'[{CL_RESET}] 触发了 %[{PRIu64}] 次, 总计耗时 [{CL_WHITE}]%[{PRIu64}][{CL_RESET}] 毫秒\n"
 - Original: "Pet can't move. Holding position %d, class = %d\n"
   Translation: ""
 - Original: "Pet loaded (%d - %s).\n"
@@ -1362,6 +1368,8 @@ Body:
   Translation: "子网检查 [%u.%u.%u.%u]: 已匹配到 [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
 - Original: "Subnet check [%u.%u.%u.%u]: [{CL_CYAN}]WAN[{CL_RESET}]\n"
   Translation: "子网检查 [%u.%u.%u.%u]: [{CL_CYAN}]WAN - 广域网[{CL_RESET}]\n"
+- Original: "Successfully loaded '[{CL_WHITE}]%d[{CL_RESET}]' maps (took %[{PRIu64}] milliseconds).[{CL_CLL}]\n"
+  Translation: "已成功加载了 '[{CL_WHITE}]%d[{CL_RESET}]' 张地图 (耗时 %[{PRIu64}] 毫秒).[{CL_CLL}]\n"
 - Original: "Successfully loaded '[{CL_WHITE}]%d[{CL_RESET}]' maps.[{CL_CLL}]\n"
   Translation: "已成功加载了 '[{CL_WHITE}]%d[{CL_RESET}]' 张地图.[{CL_CLL}]\n"
 - Original: "Successfully logged on to Char Server (Connection: '[{CL_WHITE}]%d[{CL_RESET}]').\n"
@@ -1806,6 +1814,8 @@ Body:
   Translation: ""
 - Original: "buildin_atcommand: failed to execute command '%s'\n"
   Translation: ""
+- Original: "buildin_aura: The specified aura id '%d' is invalid.\n"
+  Translation: ""
 - Original: "buildin_autobonus3: Invalid skill ID %d passed to item bonus. Skipping.\n"
   Translation: ""
 - Original: "buildin_autobonus3: Invalid skill name %s passed to item bonus. Skipping.\n"
@@ -1815,6 +1825,8 @@ Body:
 - Original: "buildin_autoequip: Item '%u' cannot be equipped.\n"
   Translation: ""
 - Original: "buildin_awake: NPC \"%s\" not found\n"
+  Translation: ""
+- Original: "buildin_bg_join: Map %s requires the mapflag MF_BATTLEGROUND.\n"
   Translation: ""
 - Original: "buildin_bg_reserve: Could not reserve battleground with name %s\n"
   Translation: ""
@@ -2314,6 +2326,14 @@ Body:
   Translation: ""
 - Original: "buildin_petskillsupport: Invalid skill defined!\n"
   Translation: ""
+- Original: "buildin_preg_search: '%s' is not server variable, please attach to a player.\n"
+  Translation: ""
+- Original: "buildin_preg_search: error argument! please give a array variable for save gameid.\n"
+  Translation: ""
+- Original: "buildin_preg_search: the array variable '%s' must be string type.\n"
+  Translation: ""
+- Original: "buildin_preg_search: variable '%s' is not a array.\n"
+  Translation: ""
 - Original: "buildin_processhalt: An error occurred while setting the '%s' event halt status to '%d'.\n"
   Translation: ""
 - Original: "buildin_processhalt: An error occurred while setting the '%s' event trigger type to '%d'.\n"
@@ -2538,6 +2558,8 @@ Body:
   Translation: ""
 - Original: "buildin_unitattack: Unsupported source unit type %d.\n"
   Translation: ""
+- Original: "buildin_unitaura: The specified aura id '%d' is invalid.\n"
+  Translation: ""
 - Original: "buildin_unitskilluseid: Invalid skill ID %d passed to item bonus. Skipping.\n"
   Translation: ""
 - Original: "buildin_unitskilluseid: Invalid skill name %s passed to item bonus. Skipping.\n"
@@ -2553,6 +2575,8 @@ Body:
 - Original: "buildin_unloadnpc: npc '%s' was not found.\n"
   Translation: ""
 - Original: "buildin_vip_status: Unsupported type %d.\n"
+  Translation: ""
+- Original: "buildin_waitingroom2bg_single: Map %s requires the mapflag MF_BATTLEGROUND.\n"
   Translation: ""
 - Original: "buildin_warp: moving player '%s' to \"%s\",%d,%d failed.\n"
   Translation: ""
