--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -774,6 +774,8 @@ Body:
   Translation: ""
 - Original: "Error syntax of configuration file %s in line %d.\n"
   Translation: ""
+- Original: "Event '[{CL_WHITE}]%s[{CL_RESET}]' executed with '[{CL_WHITE}]%d[{CL_RESET}]' NPCs, took %[{PRIu64}] ms.\n"
+  Translation: "事件 '[{CL_WHITE}]%s[{CL_RESET}]' 已经在 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 上被执行 (耗时 %[{PRIu64}] 毫秒).\n"
 - Original: "Event '[{CL_WHITE}]%s[{CL_RESET}]' executed with '[{CL_WHITE}]%d[{CL_RESET}]' NPCs.\n"
   Translation: "事件 '[{CL_WHITE}]%s[{CL_RESET}]' 已经在 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 上被执行.\n"
 - Original: "Existing map cache not found, forcing rebuild mode\n"
